--- a/server/.env.example
+++ b/server/.env.example
@@ -1,19 +1,30 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:oi4dbWZgQQ0loAhJgERcNK2o4KddBQF5veGgbyy7DC0=
 APP_DEBUG=true
 APP_URL=http://localhost
+ASSET_URL=http://localhost/assets/
+
+TELEGRAM_SECRET = '###'
+TELEGRAM_API = '###'
+TELEGRAM_GROUP_ID = '###'
+
+NGROK_URL = 'https://b60c-109-227-121-144.eu.ngrok.io'
+
+TRELLO_API_KEY = '###'
+TRELLO_SECRET_KEY = '###'
+TRELLO_BOARD_ID = '###'
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=chatostask_mysql_1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=quest_db
+DB_USERNAME=test
+DB_PASSWORD=qwerty
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
